Fix listing header on smaller screens
[MAILPOET-2788]

--- a/assets/css/src/components-plugin/_listing-newsletters.scss
+++ b/assets/css/src/components-plugin/_listing-newsletters.scss
@@ -188,9 +188,3 @@ h1.title.mailpoet-newsletter-listing-heading {
   font-size: $font-size-extra-small;
   font-weight: normal;
 }
-
-@include respond-to(small-screen) {
-  .mailpoet-newsletter-listing-heading-wrapper {
-    float: left;
-  }
-}
